Added FYRE logo and expanded about me

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <h1>FYRE 5480</h1>
                 <p>FRC team based in Reno, Nevada</p>
             </div>
+            <img src="./public/assets/svg/whitelogo.svg">
         </main>
 
         <div id="about-us">
