--- a/index.html
+++ b/index.html
@@ -35,16 +35,57 @@
             <div id="description">
                 <hr>
                 <p>
-                    <b>We are FYRE</b> (FIRST Young Robotics Engineers), team #5480, 
-                    a FIRST FRC robotics team based in Reno, Nevada. <br><br>
-                    Formed in 2013 with our rookie year in 2015, FYRE is a community high school team 
-                    with members from public and private schools in the Reno Area, such as Davidson Academy, 
-                    Galena High School, Reno High School, Bishop Manogue Catholic High School, and homeschooling.
+                    <span class="red"><b>We are FYRE</b></span> (FIRST Young Robotics Engineers), 
+                    <span class="orange">team #5480</span>, a FIRST FRC robotics team based in Reno, Nevada. <br><br>
+                    <span class="grey">Formed in 2013</span> with our rookie year in 2015, FYRE is a 
+                    <span class="red">community high school</span> team with members from public and 
+                    private schools in the Reno Area, such as Davidson Academy, Galena High School, Reno High School, 
+                    Bishop Manogue Catholic High School, and homeschooling.
                 </p>
                 <hr>
             </div>
             <div id="photos">
-                
+                <img src="./public/assets/about_us_flag.png">
+            </div>
+        </div>
+
+        <div id="robots">
+            <h1></h1>
+            <div id="bots-container">
+                <a id="liesma">
+                    <img>
+                    <h2>Liesma</h2>
+                    <h3>(2017 season)</h3>
+
+                    <p>
+                        Built to complete the Steamworks challenge, Leah is small and 
+                        light for maximum speed and maneuverability. She has a 
+                        four-wheel drive system with two omni-wheels for turning.
+                    </p>
+                </a>
+                <a id="aurora">
+                    <img>
+                    <h2>Aurora</h2>
+                    <h3>(2018 season)</h3>
+
+                    <p>
+                        Built to complete the Power Up challenge, Aurora has a hexagonal 
+                        chassis in the shape of a rectangle and trapezoid put together to
+                        afford enough space for everything but keep her small for maneuvering
+                        and fitting easily on the platform out of other robot’s ways.
+                    </p>
+                </a>
+                <a id="sol">
+                    <img>
+                    <h2>Sol</h2>
+                    <h3>(2019 season)</h3>
+
+                    <p>
+                        Built to complete the Destination: Deep Space challenge, 
+                        Sol is our sturdiest robot with a combination of tried-and-true 
+                        and new features we haven’t used before.
+                    </p>
+                </a>
             </div>
         </div>
         
