Added mobile scaling + responsiveness (hopefully)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/x-icon" href="711ebe8d03035220e9db.png">
+        <link rel="icon" type="image/x-icon" href="711ebe8d03035220e9db.svg">
         <title>FYRE 5480</title>
     </head>
 
